testdata/fixtures/models/negative/whisper.py
# known OpenAI audio family — must never fire
model = "whisper-1"
